--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  
+  font-family: 'Baloo Tamma 2', cursive;
+  }
+  body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Baloo Tamma 2', cursive !important;
+  background-color: white;
+  min-height: 100%;
+  padding-bottom: 5rem;
+  font-family: 'Baloo Tamma 2', cursive;
+  }
+  h1, h2 {
+  color: black;
+  padding: 4rem 0;
+  text-align: center;
+  text-transform: uppercase;
+ 
+  letter-spacing: 1px;
+  }
+  label {
+  color: black;
+  size: 20px;
+  }
+  .alerta-error {
+    font-family: 'Staatliches', cursive;
+  }
+.tittle{
+  font-size: 20px;
+  
+}
+.card text-center{
+  text-align: center;
+  justify-content: center;
+}
+.card-body {
+  background-color: rgb(202, 232, 241);
+}
+.card-footer{
+  background-color: #cae8f1;
+}
+.card .cita{
+  box-shadow: 5px 10px 18px #888888;
+  height: 20rem;
+  width: 20rem;
+}
+.tituloCambio{
+  background-color: #b0e5f4;
 }
